// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Button Test Button disabled 1`] = `
.c0 {
  cursor: default;
  background-color: #000;
  color: #fff;
  background-color: #999;
  border-color: #999;
  pointer-events: none;
  font-size: 16px;
}

<div>
  <button
    class="c0"
    data-testid="app-button"
    disabled=""
  >
    Primary
  </button>
</div>
`;

exports[`App Button Test Button with dark mode 1`] = `
.c0 {
  width: large;
  height: large;
  cursor: default;
  background-color: #fff;
  color: #000;
  font-size: 16px;
}

<div>
  <button
    class="c0"
    data-testid="app-button"
  >
    Primary
  </button>
</div>
`;

exports[`App Button Test Button with light mode 1`] = `
.c0 {
  width: large;
  height: large;
  cursor: default;
  background-color: #000;
  color: #fff;
  font-size: 16px;
}

<div>
  <button
    class="c0"
    data-testid="app-button"
  >
    Primary
  </button>
</div>
`;
